estrutura basica quase pronta

--- a/Projeto 1 Individual/index.html
+++ b/Projeto 1 Individual/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charlie</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -31,8 +38,26 @@
             <h3>
                 Interesses
             </h3>
-            
+            <p>
+                Games, danças urbanas, assistir anime, design e livros.
+            </p>
+        </section>
+        <section>
+            <h3>
+                Contato
+            </h3>
+            <fieldset>
+                <label for="nome">Nome</label>
+                <input type="text" id="eome" name="nome">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email">
+                <label for="mensagem"></label>
+                <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+            </fieldset>
         </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
