Iniciado estilização css com background provisório

--- a/Projeto 1 Individual/index.html
+++ b/Projeto 1 Individual/index.html
@@ -5,7 +5,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nova+Mono&family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,35 +14,41 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <h1>Charlie Pencal</h1>
-        <nav>
-            <a href="">Sobre Mim</a>
-            <a href="">Interesses</a>
-            <a href="">Contato</a>
-        </nav>
+   <header>
     </header>
     <main>
-        <section>
-            <h2>Charlie G. Pencal</h2>
+        <section class="two">
+            <div class="first-div">
+                <h2>Charlie G. Pencal</h2>
 
-            <p><i>Produtor Cênico em formação e Desenvolvedor Web Full Stack em construção</i></p>
+                <p><i>Produtor Cênico em formação e um futuro Desenvolvedor Web Full Stack</i></p>
+            </div>
+            <div class="imagem">
+                <img class="foto" src="./Charlie.png" alt="Foto de um rapaz que se diz o Charlie">
+            </div>
+            <div>
+                <nav>
+                    <a href="">Sobre Mim</a>
+                    <a href="">Interesses</a>
+                    <a href="">Contato</a>
+                </nav>
+            </div>
         </section>
-        <section>
-            <h3>
+        <section class="first">
+                <h3>
                 Sobre Mim
-            </h3>
-            <p>Meu nome é Charlie. Estou quase formado em Produção Cênica, porém já transicionando para a área da Programação pela Resília com auxilio da EBANX. </p>
+                </h3>
+                <p>Meu nome é Charlie. Estou quase formado em Produção Cênica, porém já transicionando para a área da Programação pela Resília com auxilio da EBANX. </p>
         </section>
-        <section>
+        <section class="first">
             <h3>
                 Interesses
             </h3>
             <p>
-                Games, danças urbanas, assistir anime, design e livros.
+                Games, danças urbanas, assistir anime, design, livros e artesanato.
             </p>
         </section>
-        <section>
+        <section class="first">
             <h3>
                 Contato
             </h3>
