--- a/Projeto 1 Individual/index.html
+++ b/Projeto 1 Individual/index.html
@@ -14,33 +14,31 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <header>
+    <header>
+        <nav>
+            <a href="">Sobre Mim</a>
+            <a href="">Interesses</a>
+            <a href="">Contato</a>
+        </nav>
     </header>
     <main>
-        <section class="two">
+        <section class="sec-one">
             <div class="first-div">
                 <h2>Charlie G. Pencal</h2>
-
-                <p><i>Produtor Cênico em formação e um futuro Desenvolvedor Web Full Stack</i></p>
+                <br>
+                <p><i>Produtor Cênico em formação e um futuro <b>Desenvolvedor Web Full Stack</b></i></p>
             </div>
             <div class="imagem">
                 <img class="foto" src="./Charlie.png" alt="Foto de um rapaz que se diz o Charlie">
             </div>
-            <div>
-                <nav>
-                    <a href="">Sobre Mim</a>
-                    <a href="">Interesses</a>
-                    <a href="">Contato</a>
-                </nav>
-            </div>
         </section>
-        <section class="first">
+        <section class="sec-two">
                 <h3>
                 Sobre Mim
                 </h3>
                 <p>Meu nome é Charlie. Estou quase formado em Produção Cênica, porém já transicionando para a área da Programação pela Resília com auxilio da EBANX. </p>
         </section>
-        <section class="first">
+        <section>
             <h3>
                 Interesses
             </h3>
@@ -48,7 +46,7 @@
                 Games, danças urbanas, assistir anime, design, livros e artesanato.
             </p>
         </section>
-        <section class="first">
+        <section>
             <h3>
                 Contato
             </h3>
